--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("reset.css");
+/*@import url("reset.css"); */
 
 body {
   font-size: 16px;
@@ -23,10 +23,20 @@ h2 {
   text-decoration: line-through;
 }
 
+ul {
+  list-style-type: disc;
+}
+
 
 p {
   color: black;
   font-size: 20px;
+}
+ul li {
+  color: gray;
+}
+ul li ul li {
+  color: lightgreen;
 }
 
 p#un {
@@ -37,8 +47,8 @@ p#deux {
   text-decoration: none;
 }
 p#trois {
-  background-color: pink;
+  background-color: cyan;
 }
 p#quatre {
-  background-color: blue;
+  background-color: beige;
 }
